# colored

./: Cargo.toml  README.md
examples/: custom_colors.rs  dynamic_colors.rs  most_simple.rs  nested_colors.rs
src/: color.rs  customcolors.rs  lib.rs  style.rs
tests/: ansi_term_compat.rs  printing.rs
