[package]
name = "colored"
description = "The most simple way to add colors in your terminal"
version = "2.0.0"
edition = "2021"
authors = ["Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/mackwic/colored"
repository = "https://github.com/mackwic/colored"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "term-painter"]

[features]
# with this feature, no color will ever be written
no-color = []

[dependencies]

[dev_dependencies]
ansi_term = "0.12"
