[package]
name = "mincolor"
description = "The most simple way to add colors in your terminal, without the std crate"
version = "2.0.0"
edition = "2021"
authors = ["Juliette Cordor", "Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/jewlexx/mincolor"
repository = "https://github.com/jewlexx/mincolor"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "no-std"]

[features]
# with this feature, no color will ever be written
no-color = []

[dependencies]

[dev_dependencies]
ansi_term = "0.12"
